--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Press Start 2P", Inter, system-ui, Avenir, Helvetica, Arial,
+    sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: yellow;
+  -webkit-text-stroke: 1px blue;
   background-color: black;
 
   font-synthesis: none;
